<resources>
    <string name="app_name">구해줘</string>
    <string-array name="MainList">
        <item>현위치: </item>
        <item>주소: </item>
        <item>상태: </item>
    </string-array>

    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="setting">설정</string>
    <string name="emergencyBell">비상벨</string>
    <string name="TtsSetting">TTS 설정</string>
    <string name="save">저장</string>
    <string name="MessageSetting">메세지 설정</string>
    <string name="volume">볼륨</string>
    <string name="useTTS">TTS 사용 설정</string>
    <string name="phone_number">번호</string>
    <string name="input">입력</string>
    <string name="help">사용법</string>
    <string name="situation_finish">상황해제</string>
    <string name="sign_up">회원 가입</string>
    <string name="name">이름</string>
    <string name="address">집 주소</string>
    <string name="etc">기타 특이사항</string>
    <string name="etc_hint">※질병, 신체특징, 과거병력 등\n구조에 도움될만한 점을 입력하세요</string>
    <string name="confirm">확인</string>
    <string name="cancel">취소</string>
    <string name="term1">약관1 내용 블라블라</string>
    <string name="term2">약관2 내용 블라블라</string>
    <string name="accept_term">약관 동의</string>
    <string name="accept">동의함</string>
    <string name="ID">ID(휴대폰번호)</string>
    <string name="sensitivity_setting">민감도 설정</string>
    <string name="explan_sensitivity">넘어지거나 떨어뜨렸을 때의\n민감도를 설정합니다</string>
    <string name="very_high">매우 높음</string>
    <string name="high">높음</string>
    <string name="mid">중간</string>
    <string name="low">낮음</string>
    <string name="very_low">매우 낮음</string>
    <string name="edit_member_info">회원정보 수정</string>

    <string-array name="TTS">
        <item>당뇨</item>
        <item>뇌진탕</item>
        <item>심장질환</item>
    </string-array>

    <string-array name="TTS_content">
        <item>당뇨은 이러면 좋아요</item>
        <item>뇌진탕은 이러면 좋아요</item>
        <item>심장질환에는 이게 답이죠</item>
    </string-array>
</resources>
