<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Member.TermsActivity">

    <RelativeLayout
        android:id="@+id/titleLayout"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="@color/colorPrimary">

        <TextView
            android:layout_centerInParent="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:textColor="@color/white"
            android:text="@string/accept_term" />
    </RelativeLayout>

    <ScrollView
        android:id="@+id/term1SV"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="20dp"
        android:layout_below="@id/titleLayout"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@drawable/common_google_signin_btn_icon_dark_normal_background">

        <TextView
            android:padding="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:textColor="@color/black"
            android:text="@string/term1"/>
    </ScrollView>

    <CheckBox
        android:layout_marginTop="10dp"
        android:layout_alignParentRight="true"
        android:layout_marginRight="20dp"
        android:layout_below="@id/term1SV"
        android:id="@+id/termCB1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/accept"
        android:textSize="20sp"
        />

    <ScrollView
        android:id="@+id/term2SV"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="20dp"
        android:layout_below="@id/termCB1"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@drawable/common_google_signin_btn_icon_dark_normal_background">

        <TextView
            android:padding="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:textColor="@color/black"
            android:text="@string/term1"/>
    </ScrollView>

    <CheckBox
        android:layout_marginTop="10dp"
        android:layout_alignParentRight="true"
        android:layout_marginRight="20dp"
        android:layout_below="@id/term2SV"
        android:id="@+id/termCB2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/accept"
        android:textSize="20sp"
        />

    <LinearLayout
        android:layout_marginBottom="20dp"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/confirmBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="35dp"
            android:paddingVertical="15dp"
            android:text="@string/confirm"
            android:textSize="20sp" />

        <Button
            android:id="@+id/cancelBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:paddingHorizontal="35dp"
            android:paddingVertical="15dp"
            android:text="@string/cancel"
            android:textSize="20sp" />
    </LinearLayout>
</RelativeLayout>