<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".Setting.TtsSettingActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="@color/colorPrimary">

        <TextView
            android:layout_centerInParent="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:textColor="@color/white"
            android:text="@string/TtsSetting" />

        <Button
            android:onClick="close"
            android:id="@+id/backBtn"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:background="@drawable/back" />

        <TextView
            android:id="@+id/saveTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="20dp"
            android:text="@string/save"
            android:textColor="@color/white"
            android:textSize="18sp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/volumeTV"
            android:textSize="20sp"
            android:layout_marginLeft="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="@string/volume"
            android:paddingVertical="15dp"/>

        <SeekBar
            android:id="@+id/volumeSB"
            android:layout_marginHorizontal="20dp"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/volumeTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
        <View
            android:layout_below="@id/volumeTV"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/gray"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/useTtsTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:paddingVertical="15dp"
            android:text="@string/useTTS"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <View
            android:layout_below="@id/useTtsTV"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/gray"/>

        <CheckBox
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_marginRight="20dp"
            android:id="@+id/ttsCB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
    </RelativeLayout>

    <ListView
        android:layout_marginTop="10dp"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/TTS_List"></ListView>

</LinearLayout>