<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Setting.MessageSettingActivity"
    android:background="@color/white">

    <RelativeLayout
        android:id="@+id/titleLayout"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="@color/colorPrimary">

        <TextView
            android:layout_centerInParent="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:textColor="@color/white"
            android:text="@string/MessageSetting" />

        <Button
            android:onClick="close"
            android:id="@+id/backBtn"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:background="@drawable/back" />

        <TextView
            android:id="@+id/saveTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="20dp"
            android:text="@string/save"
            android:textColor="@color/white"
            android:textSize="18sp" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/contactLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/gray" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/phoneTV"
                android:padding="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:text="@string/phone_number"
                android:textColor="@color/white"
                android:textSize="22sp" />

            <EditText
                android:inputType="phone"
                android:padding="10dp"
                android:hint="전화번호 입력"
                android:textSize="22sp"
                android:id="@+id/phoneET"
                android:layout_toRightOf="@id/phoneTV"
                android:layout_toLeftOf="@id/phoneAddBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"/>

            <Button
                android:id="@+id/phoneAddBtn"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/add"
                />
            <View
                android:layout_below="@id/phoneTV"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/gray"
                />
        </RelativeLayout>

        <ListView
            android:id="@+id/phoneLV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </ListView>

    </LinearLayout>

        <EditText
            android:gravity="top"
            android:background="@color/white"
            android:padding="10dp"
            android:inputType="textMultiLine"
            android:id="@+id/messageET"
            android:hint="메세지를 입력하세요"
            android:textSize="22sp"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />



</LinearLayout>